[workspace]
members = [
  "contracts/*",
  "daemon",
  "sdk",
  "server",
  "state-machine",
  "store",
]

[workspace.package]
version       = "0.0.0"
authors       = ["Larry Engineer <gm@larry.engineer>"]
edition       = "2021"
rust-version  = "1.65"
license       = "AGPL-v3-or-later"
homepage      = "https://larry.engineer"
repository    = "https://github.com/steak-enjoyers/cw-sdk"
documentation = "https://github.com/steak-enjoyers/cw-sdk#README"
keywords      = ["blockchain", "cosmos", "cosmwasm"]

[workspace.dependencies]
base64             = "0.13"
bcrypt             = "0.13"
bech32             = "0.9"
bip32              = "0.4"
clap               = "3"
cosmwasm-schema    = "1.1"
cosmwasm-std       = { version = "1.1", features = ["cosmwasm_1_1"]}
cosmwasm-vm        = "1.1"
cw2                = "0.16"
cw-bank            = { path = "./contracts/bank" }
cw-multi-test      = "0.16"
cw-sdk             = { path = "./sdk" }
cw-server          = { path = "./server" }
cw-state-machine   = { path = "./state-machine" }
cw-storage-plus    = "0.16"
cw-store           = { path = "./store" }
cw-token-factory   = { path = "./contracts/token-factory" }
cw-utils           = "0.16"
dialoguer          = "0.10"
hex                = "0.4"
home               = "0.5"
josekit            = "0.8"
k256               = "0.11"
rand_core          = "0.6"
schemars           = "0.8"
serde              = "1.0"
serde_json         = "1.0"
serde_yaml         = "0.9"
sha2               = "0.10"
tendermint         = "0.25"
tendermint-abci    = "0.25"
tendermint-rpc     = "0.25"
tendermint-proto   = "0.25"
thiserror          = "1.0"
tokio              = "1"
toml               = "0.5"
tracing            = "0.1"
tracing-subscriber = "0.2"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
