[package]
name        = "cw-daemon"
version     = "0.1.0"
authors     = ["Larry Engineer <gm@larry.engineer>"]
edition     = "2021"
description = "Daemon software for the CosmWasm SDK blockchain"
readme      = "./README.md"
homepage    = "https://larry.engineer"
repository  = "https://github.com/steak-enjoyers/cw-sdk"
license     = "AGPL-v3-or-later"
keywords    = ["blockchain", "cosmos", "cosmwasm"]

[dependencies]
bcrypt = "0.13"
bip32 = "0.4"
clap = { version = "3", features = ["derive"] }
cw-sdk = { path = "../sdk" }
hex = "0.4"
home = "0.5"
josekit = "0.8"
k256 = "0.11"
rpassword = "7.0"
rand_core = "0.6"
serde = "1.0"
serde-json-wasm = "0.4"
tendermint-abci = "0.25"
text_io = "0.1"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
