[package]
name          = "cw-daemon"
description   = "Daemon software for the CosmWasm SDK blockchain"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[dependencies]
bcrypt             = { workspace = true }
bip32              = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
cosmwasm-std       = { workspace = true }
cw-server          = { workspace = true }
cw-state-machine   = { workspace = true }
cw-types           = { workspace = true }
dialoguer          = { workspace = true }
hex                = { workspace = true }
home               = { workspace = true }
josekit            = { workspace = true }
k256               = { workspace = true }
rand_core          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = { workspace = true }
tendermint         = { workspace = true }
tendermint-abci    = { workspace = true }
tendermint-rpc     = { workspace = true, features = ["http-client"] }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
