[package]
name        = "cw-sdk"
version     = "0.1.0"
authors     = ["Larry Engineer <gm@larry.engineer>"]
edition     = "2021"
description = "State machine engine based on CosmWasm"
readme      = "./README.md"
homepage    = "https://larry.engineer"
repository  = "https://github.com/steak-enjoyers/cw-sdk"
license     = "AGPL-v3-or-later"
keywords    = ["blockchain", "cosmos", "cosmwasm"]

[dependencies]
base64 = "0.13"
bech32 = "0.9"
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cosmwasm-vm = "1.1"
hex = "0.4"
ripemd = "0.1"
schemars = "0.8"
# TODO: switching to k256
secp256k1 = { version = "0.24", features = ["bitcoin_hashes"] }
serde = "1.0"
serde-json-wasm = "0.4"
sha2 = "0.10"
tendermint-abci = "0.25"
tendermint-proto = "0.25"
thiserror = "1.0"
tracing = "0.1"
