[package]
name        = "cw-server"
version     = "0.1.0"
authors     = ["Larry Engineer <gm@larry.engineer>"]
edition     = "2021"
description = "ABCI server implementation of CosmWasm SDK"
readme      = "./README.md"
homepage    = "https://larry.engineer"
repository  = "https://github.com/steak-enjoyers/cw-sdk"
license     = "AGPL-v3-or-later"
keywords    = ["blockchain", "cosmos", "cosmwasm"]

[dependencies]
cw-sdk = { path = "../sdk" }

cosmwasm-std = "1.1"
serde_json = "1.0"
tendermint-abci = "0.25"
tendermint-proto = "0.25"
