[package]
name          = "cw-server"
description   = "ABCI server implementation of CosmWasm SDK"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[dependencies]
cosmwasm-std     = { workspace = true }
cw-state-machine = { workspace = true }
serde_json       = { workspace = true }
tendermint-abci  = { workspace = true }
tendermint-proto = { workspace = true }
