[package]
name          = "cw-state-machine"
description   = "State machine engine based on CosmWasm"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[dependencies]
base64          = { workspace = true }
bech32          = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cosmwasm-vm     = { workspace = true }
cw-sdk          = { workspace = true }
cw-store        = { workspace = true }
hex             = { workspace = true }
k256            = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }
