[package]
name          = "cw-store"
description   = "Storage data structure and database backend for CosmWasm SDK"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-vm  = { workspace = true }
