[package]
name          = "cw-store"
description   = "Storage data structure and database backend for CosmWasm SDK"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[features]
# Including "mock" as a default feature for development purpose. For prod this should be removed.
default = ["mock"]
mock = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-vm  = { workspace = true }
merk         = { workspace = true }
