[package]
name          = "cw-store"
description   = "Storage data structure and database backend for CosmWasm SDK"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[features]
default = ["iterator"]
# This enables iterator functionality, as exposed in cosmwasm-std/iterator
iterator = ["cosmwasm-std/iterator"]

[dependencies]
anyhow       = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-vm  = { workspace = true }
merk         = { workspace = true }
