[package]
name          = "cw-types"
description   = "Common type definitions for CosmWasm SDK"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[features]
default = ["address", "hash"]
address = []
hash    = []

[dependencies]
bech32          = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }
