[package]
name        = "cw-bank"
version     = "0.1.0"
authors     = ["Larry Engineer <gm@larry.engineer>"]
edition     = "2021"
description = "Bank contract responsible for handling multi-asset coin transfers between accounts"
readme      = "./README.md"
homepage    = "https://larry.engineer"
repository  = "https://github.com/steak-enjoyers/cw-sdk"
license     = "AGPL-v3-or-later"
keywords    = ["blockchain", "cosmos", "cosmwasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw2 = "0.15"
cw-storage-plus = "0.15"
schemars = "0.8"
serde = "1.0"
thiserror = "1.0"
