[package]
name          = "cw-bank"
description   = "Bank contract responsible for handling multi-asset coin transfers between accounts"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-address-like = { workspace = true }
cw-paginate     = { workspace = true }
cw-sdk          = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror       = { workspace = true }
