[package]
name          = "cw-token-factory"
description   = "Allows any user or contract to mint tokens with the bank contract"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-bank         = { workspace = true }
cw-sdk          = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
thiserror       = { workspace = true }
